apps/mailserver/k8s/mail.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mail
  namespace: mailserver
spec:
  type: ClusterIP
  selector:
    app: mail
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
