apps/mailserver/k8s/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mailserver
  namespace: mailserver
spec:
  parentRefs:
    - name: homelab
      namespace: traefik
  hostnames:
    - mailserver.biplane.v6.rocks
  rules:
    - backendRefs:
        - name: mailserver
          port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mail
  namespace: mailserver
spec:
  parentRefs:
    - name: homelab
      namespace: traefik
  hostnames:
    - mail.biplane.v6.rocks
  rules:
    - backendRefs:
        - name: mail
          port: 80
